welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: type mismatch;
 found   : Int(5)
 required: Boolean
	if (1<= day <= 5) {
                       ^alarmClock:4: error: type mismatch;
 found   : Int(700)
 required: String
			return 700;
                               ^alarmClock:6: error: type mismatch;
 found   : Int(1000)
 required: String
			return 1000;
                               ^alarmClock:10: error: type mismatch;
 found   : Int(1000)
 required: String
			return 1000;
                               ^alarmClock:12: error: not found: value off
			return off;
                               ^