welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if (1<= day <= 5) {
		if (!vacation) {
			return 700;
		}else{
			return 1000;
		}
	}else{
		if (!vacation) {
			return 1000;
		}else{
			return off;
		}
	}
}
